# VoiceAI

./: .gitignore  README.md
livekit-voice-agent/: AGENTS.md  agent.py  prompt.py  pyproject.toml
livekit-web-app/: package-lock.json  package.json
livekit-web-app/src/app/: globals.css  layout.tsx  page.tsx
livekit-web-app/src/app/api/dispatch/: route.ts
livekit-web-app/src/app/api/token/: route.ts
livekit-web-app/src/components/: agent-audio-visualizer-aura.tsx  agent-audio-visualizer-bar.tsx  agent-chat-transcript.tsx  agent-control-bar.tsx  agent-track-control.tsx
